# recozik

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_SECURITY.md  GEMINI.md  LICENSE  MIGRATION.fr.md  MIGRATION.md  README.fr.md  README.md  SECURITY.md  TRANSLATION.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml
docker/: .env.example  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/: deploy-backend.fr.md  deploy-backend.md  deploy-frontend.fr.md  deploy-frontend.md  firefox-e2e-issues.md  firefox-e2e-resolution.md
scripts/: compile_translations.py  ensure_webui_deps.sh  measure_import_time.py  token_audit.py
src/recozik/: __init__.py  audd.py  cache.py  cli.py  config.py  fingerprint.py  i18n.py
src/recozik/cli_support/: __init__.py  audd_helpers.py  completion.py  deps.py  locale.py  logs.py  metadata.py  musicbrainz.py  options.py  paths.py  prompts.py
src/recozik/commands/: __init__.py  _callbacks.py  completion.py  config.py  fingerprint.py  identify.py  identify_batch.py  inspect.py  rename.py
src/recozik/locales/fr/LC_MESSAGES/: recozik.mo  recozik.po
tests/: __init__.py  conftest.py  test_audd.py  test_cli_completion.py  test_cli_identify.py  test_cli_identify_batch.py  test_cli_import_time.py  test_cli_inspect.py  test_cli_rename.py  test_cli_rename_apply.py  test_cli_rename_dry_run.py  test_cli_rename_interactive.py  test_cli_rename_interrupts.py  test_cli_rename_metadata.py  test_cli_service_integration.py  test_cli_support_audd_helpers.py  test_cli_support_completion_helpers.py  test_cli_support_metadata.py  test_cli_support_options.py  test_config.py  test_fingerprint_lookup.py  test_services.py  test_web_app.py
tests/helpers/: __init__.py  identify.py  rename.py
