[project]
name = "recozik"
version = "0.10.0"
description = "Terminal-first CLI for audio fingerprinting and AcoustID lookup"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Patrick ZAJDA", email = "patrick@zajda.fr" }
]
keywords = [
    "audio",
    "fingerprinting",
    "acoustid",
    "cli",
    "music",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: French",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]
requires-python = ">=3.10,<3.15"
dependencies = [
    "recozik-core",
    "recozik-services",
    "typer>=0.20.0",
]

[project.optional-dependencies]
ffmpeg-support = [
    "recozik-core[ffmpeg-support]"
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
    "mypy>=1.12.0",
    "types-requests>=2.32.0",
    "recozik-web",
    "httpx>=0.27.0",
]

[project.scripts]
recozik = "recozik.cli:app"

[project.urls]
Homepage = "https://github.com/Nardol/recozik"
Documentation = "https://github.com/Nardol/recozik#readme"
Issues = "https://github.com/Nardol/recozik/issues"
Changelog = "https://github.com/Nardol/recozik/releases"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.typer]
short_help = "Music recognition based on audio fingerprints."

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "D",
    "B",
    "I",
    "UP",
    "N",
    "S",
    "RUF"
]
ignore = [
    "S101",
    "D203",
    "D213"
]

[tool.ruff.lint.isort]
known-first-party = ["recozik", "recozik_core"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"packages/recozik-web/src/recozik_web/app.py" = ["B008"]
"packages/recozik-web/src/recozik_web/auth.py" = ["B008"]
"src/recozik/commands/**/*.py" = ["B008"]
"src/recozik/cli.py" = ["B008"]

[tool.uv.sources]
recozik-core = { workspace = true }
recozik-services = { workspace = true }
recozik-web = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/recozik-core",
    "packages/recozik-services",
    "packages/recozik-web",
]

[tool.mypy]
python_version = "3.10"
strict_optional = true
namespace_packages = false
explicit_package_bases = false
ignore_missing_imports = true
files = [
    "packages/recozik-core/src/recozik_core",
    "packages/recozik-services/src/recozik_services",
    "packages/recozik-web/src/recozik_web",
    "src/recozik",
]


[tool.codespell]
skip = "*.fr.md,*/fr/*,packages/recozik-webui/src/i18n/messages.ts,*.po,*.mo,packages/recozik-webui/package-lock.json,packages/recozik-core/src/recozik_core/fingerprint.py,tests/test_cli_identify.py,tests/test_cli_rename_metadata.py,node_modules,dist,build"
ignore-words-list = "crate,te,nd,exemple,correspondance,correspondants"
